# KittenWhisker

./: .gitignore  CMakeLists.txt  README.md  create_jni.sh  generate_flamegraph.sh  generate_trace.sh  install_debug_symbols.sh  install_packages.sh  perf.conf  pom.xml  spark_app_cmd  spark_app_cmd.sh  start_test.sh
dev/: build-docker.sh  build.sh
src/main/java/me/codingcat/happysparking/: PerfAgent.java  StackTraceGenerator.java  Utils.java
src/main/java/me/codingcat/kittenwhisker/: PerfAgent.java  StackTraceGenerator.java  Utils.java
src/main/native/: perf-map-agent.c  perf-map-file.c
